按钮提交到里面

--- a/index.html
+++ b/index.html
@@ -22,22 +22,6 @@
         #app{
             margin:20px;
         }
-        .g-button{
-            padding:0 1em;
-            height:var(--botton-height);
-            border-color: var(--button-border-color);
-            border-radius: var(--button-border-redius);
-            font-size: var(--font-size);
-        }
-        .g-button:hover{
-            border-color: var(--button-border-hover);
-        }
-        .g-button:active{
-            border-color: var(--button-border-active);
-        }
-        .g-button:focus{
-            outline: none;
-        }
 
     </style>
 </head>
@@ -48,13 +32,7 @@
 </div>
 
 
+<script src="./src/app.js"></script>
 
-<script src="./node_modules/vue/dist/vue.min.js"></script>
-<script src="./g-button.js"></script>
-<script>
-    new Vue({
-        el:'#app',
-    })
-</script>
 </body>
 </html>
